--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -16,5 +16,6 @@
     "mongodb": "^4.0.0",
     "mongoose": "^8.4.3",
     "nodemon": "^3.1.4"
-  }
+  },
+  "description": ""
 }
