--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -64,6 +64,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3"
