--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.3",
     "echarts": "^5.5.0",
     "framer-motion": "^11.2.12",
+    "lucide-react": "^0.407.0",
     "mui": "^0.0.1",
     "nth-check": "^2.1.1",
     "react": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "remixicon": "^4.3.0",
     "sass": "^1.77.6",
     "web-vitals": "^2.1.4"
