--- a/package.json
+++ b/package.json
@@ -11,13 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2",
-    "antd": "^5.19.1",
-    "framer-motion": "^11.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
-    "recharts": "^2.12.7",
-    "sass": "^1.77.7"
+    "@fortawesome/fontawesome-free": "^6.5.2"
   }
 }
