--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,10 +21,12 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "echarts": "^5.5.0",
+    "es-get-iterator": "^1.1.3",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.407.0",
     "mui": "^0.0.1",
     "nth-check": "^2.1.1",
+    "object-is": "^1.1.6",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
