--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@mui/icons-material": "^5.16.5",
     "antd": "^5.19.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "es-get-iterator": "^1.1.3",
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
