--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "antd": "^5.19.1",
     "es-get-iterator": "^1.1.3",
     "framer-motion": "^11.3.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
